[package]
name = "rsdb"
description = "rsdb: linux debugger written in Rust"
version = "0.0.1"
authors = ["err0rless <err0rless313@gmail.com>"]
repository = "https://github.com/err0rless/rsdb"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.0"
colored = "2"
libc = "0.2.103"
regex = "1.5.4"
rustyline = "9.0.0"
clap = "2.33.3"
