[package]
name = "rsdb"
description = "rsdb: linux debugger written in Rust"
version = "0.0.1"
authors = ["err0rless <err0rless313@gmail.com>"]
repository = "https://github.com/err0rless/rsdb"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# OS dependencies
nix = "0.23.0"
libc = "0.2.103"
linux-personality = "1.0.0"
elf = "0.0.10"

# for rsdb's command line interface
rustyline = "9.0.0"
clap = "2.33.3"

# General utilites
regex = "1.5.4"
colored = "2"